@@ -5,6 +5,8 @@
  * fixed possible buffer overflows in parse_packages_txt
  * added more buffer checks in config parser
  * search now searches a packages location field as well
+ * transaction report now shows how much will be downloaded
+   and how much disk space will be used.
 
 0.9.6c Oct 15, 2003
  * patch data is now fetched from patches/PACKAGES.TXT instead of
